<resources>
    <string name="app_name">Mobile_HW1</string>
    <string name="main_BTN_play">Play</string>
    <string name="main_LBL_scoreTable">Score Table</string>
    <string name="description">image</string>
    <string name="zero">0</string>
    <string name="winner">Winner!</string>
    <string name="back_to_menu">Back To Menu</string>
    <string name="congrats">Congrats!!!</string>
    <string name="you_won">You Won!</string>
    <string name="drawMsg">It\'s a draw</string>
    <string name="congratsMsg">Congrats!!!</string>
    <string name="winMsg">You Won</string>
    <string name="str_choose_avatar">Choose Avatar</string>
    <string name="str_enter_your_name">Enter Your Name</string>
    <string name="str_submit">Submit</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leaderBoard">LeaderBoard</string>
    <string name="lost_msg">You Lose!</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="blank">-</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="rank_col">Rank</string>
    <string name="avatar_col">Avatar</string>
    <string name="score_col">Score</string>
    <string name="name_col">Name</string>
    <string name="_3">3</string>
</resources>