<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background">

    <TableLayout
        android:id="@+id/score_TBL_topTen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:stretchColumns="*">


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/rank_col"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/name_col"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/score_col"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/avatar_col"
                android:textColor="@color/black"
                android:textSize="20sp" />


        </TableRow>

        <TableRow
            android:id="@+id/score_TBL_row_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">

            <TextView
                android:id="@+id/list_LBL_rank_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_1"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/list_LBL_name_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/blank"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/list_LBL_score_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/blank"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/score_TBL_player_1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:contentDescription="@string/description"
                android:src="@drawable/image_view_border" />

        </TableRow>

        <TableRow
            android:id="@+id/score_TBL_row_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">

            <TextView
                android:id="@+id/list_LBL_rank_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_2"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/list_LBL_name_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text="@string/blank"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/list_LBL_score_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/blank"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/score_TBL_player_2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:contentDescription="@string/description"
                android:src="@drawable/image_view_border" />

        </TableRow>

        <TableRow
            android:id="@+id/score_TBL_row_3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">

            <TextView
                android:id="@+id/list_LBL_rank_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_3"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/list_LBL_name_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text="@string/blank"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/list_LBL_score_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/blank"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/score_TBL_player_3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:contentDescription="@string/description"
                android:src="@drawable/image_view_border" />

        </TableRow>

        <TableRow
            android:id="@+id/score_TBL_row_4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">

            <TextView
                android:id="@+id/list_LBL_rank_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_4"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/list_LBL_name_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text="@string/blank"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/list_LBL_score_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/blank"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/score_TBL_player_4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:contentDescription="@string/description"
                android:src="@drawable/image_view_border" />

        </TableRow>

        <TableRow
            android:id="@+id/score_TBL_row_5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">

            <TextView
                android:id="@+id/list_LBL_rank_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_5"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/list_LBL_name_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/blank"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/list_LBL_score_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/blank"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/score_TBL_player_5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:contentDescription="@string/description"
                android:src="@drawable/image_view_border" />

        </TableRow>

        <TableRow
            android:id="@+id/score_TBL_row_6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">

            <TextView
                android:id="@+id/list_LBL_rank_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_6"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/list_LBL_name_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/blank"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/list_LBL_score_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/blank"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/score_TBL_player_6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:contentDescription="@string/description"
                android:src="@drawable/image_view_border" />

        </TableRow>

        <TableRow
            android:id="@+id/score_TBL_row_7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">

            <TextView
                android:id="@+id/list_LBL_rank_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_7"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/list_LBL_name_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/blank"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/list_LBL_score_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/blank"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/score_TBL_player_7"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:contentDescription="@string/description"
                android:src="@drawable/image_view_border" />

        </TableRow>

        <TableRow
            android:id="@+id/score_TBL_row_8"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">

            <TextView
                android:id="@+id/list_LBL_rank_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_8"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/list_LBL_name_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/blank"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/list_LBL_score_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/blank"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/score_TBL_player_8"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:contentDescription="@string/description"
                android:src="@drawable/image_view_border" />

        </TableRow>

        <TableRow
            android:id="@+id/score_TBL_row_9"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">

            <TextView
                android:id="@+id/list_LBL_rank_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_9"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/list_LBL_name_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/blank"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/list_LBL_score_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/blank"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/score_TBL_player_9"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:contentDescription="@string/description"
                android:src="@drawable/image_view_border" />

        </TableRow>

        <TableRow
            android:id="@+id/score_TBL_row_10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">

            <TextView
                android:id="@+id/list_LBL_rank_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_10"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/list_LBL_name_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/blank"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/list_LBL_score_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/blank"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/score_TBL_player_10"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:contentDescription="@string/description"
                android:src="@drawable/image_view_border" />

        </TableRow>


    </TableLayout>


</ScrollView>